--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "imoocmanager",
+  "name": "manager",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -55,7 +55,10 @@
     "react-dev-utils": "^7.0.0",
     "react-dom": "^16.7.0",
     "react-draft-wysiwyg": "^1.13.2",
+    "react-redux": "^7.0.2",
     "react-router-dom": "^4.3.1",
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
